--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Web Devolop</div>
+                        <div class="text">Web Develop</div>
                         <p>Available 24/7 . Welcome to My Portfolio!I have experience in Blogs, Personal Sites, E-commerce platforms, Social Networks and much more.You Will Get Full functional website, Manageable Back End With PHP OOP & LARAVEL framework, Secured Website & Database, Errors/Bugs Free, Cross Browser Compatibility & Source Code .</p>
                     </div>
                 </div>
@@ -181,34 +181,6 @@
                         <div class="text">Miskat Jisan</div>
                         <p>Hello There!
                         I am professional Web Deginer & Web Devoloper. I have 3 Years Experience in Wordpress, PHP OOP & LARAVEL Framework.  </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
